--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <img src="assets/img/hero-img.jpg" alt="" data-aos="fade-in">
 
       <div class="container d-flex flex-column align-items-center justify-content-center text-center" data-aos="fade-up" data-aos-delay="100">
-        <h2>Meigarom D. F. Lopes</h2>
+        <h2>Rickson Rodrigues Pereira</h2>
         <p><span class="typed" data-typed-items="Cientista de Dados"></span></p>
       </div>
     
@@ -83,8 +83,10 @@
             <div class="about-me">
               <h4>Sobre mim</h4>
               <p>
-                Como Cientista de Dados Sênior com mais de 8 anos de experiência em startups e scale-ups de ritmo acelerado,
-                me especializei na construção e implantação de produtos baseados em ML que impulsionam decisões de negócios. 
+                Analista de Dados | Business Intelligence
+Olá! Sou um analista de dados em formação, focado em transformar dados em insights que geram valor e apoiar a tomada de decisão.
+Atualmente no último ano da graduação em Banco de Dados, estou desenvolvendo minhas habilidades práticas na Comunidade DS, onde aprofundo meus conhecimentos 
+Busco minha primeira oportunidade profissional para aplicar minhas competências, aprender continuamente e contribuir para o crescimento de uma empresa orientada a dados. 
               </p>
               <p>
                 Tenho grande conforto com diversas linguagens de programação, ferramentas para processamento de Big Data, 
