--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
       <div class="container d-flex flex-column align-items-center justify-content-center text-center" data-aos="fade-up" data-aos-delay="100">
         <h2>Rickson Rodrigues Pereira</h2>
-        <p><span class="typed" data-typed-items="Cientista de Dados"></span></p>
+        <p><span class="typed" data-typed-items="Analista de Dados | Business Intelligence"></span></p>
       </div>
     
     </section><!-- /Hero Section -->
@@ -83,14 +83,13 @@
             <div class="about-me">
               <h4>Sobre mim</h4>
               <p>
-                Analista de Dados | Business Intelligence
+              
 Olá! Sou um analista de dados em formação, focado em transformar dados em insights que geram valor e apoiar a tomada de decisão.
 Atualmente no último ano da graduação em Banco de Dados, estou desenvolvendo minhas habilidades práticas na Comunidade DS, onde aprofundo meus conhecimentos 
 Busco minha primeira oportunidade profissional para aplicar minhas competências, aprender continuamente e contribuir para o crescimento de uma empresa orientada a dados. 
               </p>
-              <p>
-                Tenho grande conforto com diversas linguagens de programação, ferramentas para processamento de Big Data, 
-                algoritmos de Machine Learning e na construção de infraestrutura de dados em nuvens.
+              <p> Atualmente, estou desenvolvendo minhas habilidades práticas na Comunidade DS, onde aprofundo meus conhecimentos em Excel, Power BI, Python e SQL. Meu foco é a aplicação de métricas e das quatro etapas da análise de dados: Descritiva (o que aconteceu), Diagnóstica (por que aconteceu), Preditiva (o que vai acontecer) e Prescritiva (o que devemos fazer).
+                   Essa especialização prática, somada à base sólida que estou construindo no último ano da graduação em Banco de Dados, me prepara para os desafios reais do mercado. 
               </p>
             </div>
           </div>
@@ -101,10 +100,10 @@ Busco minha primeira oportunidade profissional para aplicar minhas competências
 
               <div class="about-me">
               <h4>Contatos</h4>
-                <p><strong>Name: </strong> <span>Meigarom Lopes</span></p>
-                <p><strong>Título: </strong> <span>Cientista de Dados</span></p>
-                <p><strong>Email: </strong> <span>foo@comunidadeds.com</span></p>
-                <p><strong>Telefone: </strong> <span>(11) 9863-XXXX</span></p>
+                <p><strong>Name: </strong> <span>Rickson Rodrigues</span></p>
+                <p><strong>Título: </strong> <span>Análista de Dados</span></p>
+                <p><strong>Email: </strong> <span>ricksonrodrigues98@outlook.com</span></p>
+                <p><strong>Telefone: </strong> <span>(61) 99630-2617</span></p>
               </div>
               </div>
               </div>
@@ -138,11 +137,10 @@ Busco minha primeira oportunidade profissional para aplicar minhas competências
             <h3 class="resume-title">Objetivo</h3>
 
             <div class="resume-item pb-0">
-              <h4>Meigarom D. F. Lopes</h4>
+              <h4>Rickson Rodrigues Pereira</h4>
               <p>
                 <em>
-                  Busco oportunidades remotas como Cientista de Dados Sênior onde eu possa ajudar empresas a crescer com produtos 
-                  de dados escaláveis orientados à decisão e um ambiente colaborativo.
+                 Busco minha primeira oportunidade profissional para aplicar essas competências, aprender continuamente e contribuir para o crescimento de uma empresa orientada a dados.
                 </em>
               </p>
             </div><!-- Edn Resume Item -->
