--- a/index.html
+++ b/index.html
@@ -147,17 +147,17 @@ Busco minha primeira oportunidade profissional para aplicar minhas competências
 
             <h3 class="resume-title">Formação</h3>
             <div class="resume-item">
-              <h4>Engenharia Elétrica</h4>
-              <h5>2010 - 2015</h5>
-              <p><em>Universidade de São Paulo, São Carlos, SP</em></p>
-              <p>Disciplinas: Algoritmos, Programação em Python, R e SQL, Estatística Avançada</p>
+              <h4>Superior em Banco de Dados</h4>
+              <h5> 01/2023 -01/2026 </h5>
+              <p><em>Universidade Cruzeiro do Sul, DF </em></p>
+              <p>Disciplinas: Algoritmos, Programação em Python, Business Intelligence BI e SQL, Estatística </p>
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>Ciência da Computação</h4>
-              <h5>2013 - 2014</h5>
-              <p><em>University of Missouri - Kansas City, MO</em></p>
-              <p>Disciplinas: Algoritmos de Machine Learning, Bancos de Dados, Sistemas Operacionais Avançados, Computação em Nuvem, Processamento de Big Data</p>
+              <h4>Análista de Dados</h4>
+              <h5>2025 - 2026</h5>
+              <p><em>Comunidade DS</em></p>
+              <p>Disciplinas:Excel, Power BI, Análise de Dados em Produção, Métricas de Negócio,Python, SQL, Estatística</p>
             </div><!-- Edn Resume Item -->
 
             <h3 class="resume-title">Tecnologias</h3>
@@ -169,73 +169,72 @@ Busco minha primeira oportunidade profissional para aplicar minhas competências
               <div class="row gy-4">
                   <div class="skills-content skills-animation">
 
-                    <h5>Linguagens de Programação</h5>
+                    <h5>Ferramentas e Linguagens o</h5>
 
                     <div class="progress">
-                      <span class="skill"><span>Programção Python</span> <i class="val">100%</i></span>
+                      <span class="skill"><span>Excel</span> <i class="val">100%</i></span>
                       <div class="progress-bar-wrap">
                         <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                       </div>
                     </div><!-- End Skills Item -->
 
                     <div class="progress">
-                      <span class="skill"><span>Programção SQL</span> <i class="val">100%</i></span>
+                      <span class="skill"><span>Power BI</span> <i class="val">100%</i></span>
                       <div class="progress-bar-wrap">
                         <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                       </div>
                     </div><!-- End Skills Item -->
 
                     <div class="progress">
-                      <span class="skill"><span>Programção Spark</span> <i class="val">80%</i></span>
+                      <span class="skill"><span>Python</span> <i class="val">20%</i></span>
                       <div class="progress-bar-wrap">
                         <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                       </div>
                     </div><!-- End Skills Item -->
 
-                    <h5>Machine Learning</h5>
-
-                    <div class="progress">
-                      <span class="skill"><span>Algoritmos de Classificação</span> <i class="val">100%</i></span>
-                      <div class="progress-bar-wrap">
-                        <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-                      </div>
-                    </div><!-- End Skills Item -->
-
-                    <div class="progress">
-                      <span class="skill"><span>Algoritmos de Regressão</span> <i class="val">100%</i></span>
-                      <div class="progress-bar-wrap">
-                        <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-                      </div>
-                    </div><!-- End Skills Item -->
-
-                    <div class="progress">
-                      <span class="skill"><span>Algoritmos de Clusterização</span> <i class="val">80%</i></span>
+                     <div class="progress">
+                      <span class="skill"><span>SQL</span> <i class="val">20%</i></span>
                       <div class="progress-bar-wrap">
                         <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                       </div>
                     </div><!-- End Skills Item -->
 
+                    <h5>Minhas Habilidades em Análise de Dados</h5>
+
                     <div class="progress">
-                      <span class="skill"><span>Séries Temporais</span> <i class="val">40%</i></span>
+                      <span class="skill"><span>análises complexas, automação, dashboards</span> <i class="val">100%</i></span>
                       <div class="progress-bar-wrap">
-                        <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
+                        <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                       </div>
                     </div><!-- End Skills Item -->
 
                     <div class="progress">
-                      <span class="skill"><span>Sistemas de Recomendação</span> <i class="val">80%</i></span>
+                      <span class="skill"><span>modelagem de dados, criação de painéis interativos, análises de RFM e cohort.</span> <i class="val">100%</i></span>
+                      <div class="progress-bar-wrap">
+                        <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                      </div>
+                    </div><!-- End Skills Item -->
+
+                    <div class="progress">
+                      <span class="skill"><span>Análises Descritivas e Diagnósticas (tendências, padrões e correlações).</span> <i class="val">80%</i></span>
                       <div class="progress-bar-wrap">
                         <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                       </div>
                     </div><!-- End Skills Item -->
 
                     <div class="progress">
-                      <span class="skill"><span>Análise de Sobrevivência</span> <i class="val">30%</i></span>
+                      <span class="skill"><span>bibliotecas para análise de dados (Pandas, NumPy, Matplotlib, Seaborn).</span> <i class="val">40%</i></span>
                       <div class="progress-bar-wrap">
-                        <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
+                        <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
                       </div>
                     </div><!-- End Skills Item -->
 
+                    <div class="progress">
+                      <span class="skill"><span>Estatística aplicada (distribuições, testes de hipótese, variabilidade).</span> <i class="val">80%</i></span>
+                      <div class="progress-bar-wrap">
+                        <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+                      </div>
+                    </div><!-- End Skills Item -->
                   </div>
               </div>
             </div>
