--- a/index.html
+++ b/index.html
@@ -179,23 +179,37 @@ Busco minha primeira oportunidade profissional para aplicar minhas competências
                     </div><!-- End Skills Item -->
 
                     <div class="progress">
-                      <span class="skill"><span>Power BI</span> <i class="val">100%</i></span>
+                      <span class="skill"><span>Google Sheets</span> <i class="val">100%</i></span>
                       <div class="progress-bar-wrap">
                         <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                       </div>
                     </div><!-- End Skills Item -->
 
                     <div class="progress">
-                      <span class="skill"><span>Python</span> <i class="val">20%</i></span>
+                      <span class="skill"><span>Power BI</span> <i class="val">100%</i></span>
                       <div class="progress-bar-wrap">
-                        <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                        <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                       </div>
                     </div><!-- End Skills Item -->
 
-                     <div class="progress">
+                      <div class="progress">
+                      <span class="skill"><span>Looker Studio</span> <i class="val">70%</i></span>
+                      <div class="progress-bar-wrap">
+                        <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                      </div>
+                    </div><!-- End Skills Item -->
+
+                    <div class="progress">
+                      <span class="skill"><span>Python</span> <i class="val">20%</i></span>
+                      <div class="progress-bar-wrap">
+                        <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+                      </div>
+                    </div><!-- End Skills Item -->
+
+                      <div class="progress">
                       <span class="skill"><span>SQL</span> <i class="val">20%</i></span>
                       <div class="progress-bar-wrap">
-                        <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                        <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
                       </div>
                     </div><!-- End Skills Item -->
 
@@ -248,16 +262,17 @@ Busco minha primeira oportunidade profissional para aplicar minhas competências
             <h3 class="resume-title">Experiência</h3>
             <div class="resume-item">
               <h4>Cientista de Dados Sênior</h4>
-              <h5>2022 - Present</h5>
+              <h5>2025 - Presente</h5>
               <p><em>Comunidade DS</em></p>
               <ul>
-                <li>Liderança e mentoria de um time de analistas de dados para executar o roadmap de produtos de dados.</li>
-                <li>Construção de um data warehouse usando os serviços do Google Cloud Platform (GCP).</li>
-                <li>Criação e manutenção de dashboards com os principais KPIs dos times de vendas e marketing.</li>
-                <li>Desenvolvimento de modelo de Machine Learning para prever faturamento mensal com algoritmos de séries temporais.</li>
+                <li>Desenvolvimento de análises de negócio com Excel e Power BI, criando dashboards interativos e relatórios executivos para acompanhamento de KPIs.</li>
+                <li>Implementação de análises RFM e Cohort, possibilitando segmentação de clientes e insights sobre retenção.</li>
+                <li>Condução de análises descritivas e diagnósticas para identificar tendências, padrões e correlações em dados de vendas e marketing.</li>
+                <li>Aplicação de estatística aplicada (distribuições, testes de hipóteses e variabilidade) para apoiar a tomada de decisão baseada em dados.</li>
+                <li>Utilização de Python e SQL em análises pontuais para tratamento, exploração e visualização de dados.</li>
               </ul>
               <p>
-                Stack: Python, SQL, GCP, BigQuery, Machine Learning, Looker Studio.
+                Stack: Python, SQL, Excel, Google Sheets , Looker Studio, Power BI.
               </p>
             </div><!-- Edn Resume Item -->
 
@@ -276,24 +291,7 @@ Busco minha primeira oportunidade profissional para aplicar minhas competências
                 Stack: Python, SQL, GCP, BigQuery, Machine Learning, Looker Studio.
               </p>
             </div><!-- Edn Resume Item -->
-
-            <div class="resume-item">
-              <h4>Cientista de Dados Pleno</h4>
-              <h5>Novembro/2017 - Março/2022</h5>
-              <p><em>Loft Real State Startup</em></p>
-              <ul>
-                <li>Construção de pipeline de dados (camada batch) com AWS, Spark e Airflow.</li> 
-                <li>Classificação de imagens de modelos de moda usando CNN com Transfer Learning em Tensorflow e Keras.</li>
-                <li>Sistema de Recomendação com análise de cestas de compras (Basket Analysis).</li>
-                <li>Desenvolvimento de modelo de previsão de vendas com acurácia superior a 80%. O modelo reduziu o estoque em 12% e aumentou as vendas em 9%.  </li>
-                <li>Criação de ambiente de produção para hospedar modelos de ML com acesso via API e automação de re-treinamento.  </li>
-                <li>Sistema de monitoramento de estoque para prever esgotamento e sugerir reposição.  </li>
-              </ul>
-              <p>
-                Stack: Spark, Airflow, AWS, Tensorflow, Keras, SQL, Flask, Amazon Redshift, Snowflake, Looker, Python, Séries Temporais, LSTM, Random Forest, XGBoost.
-              </p>
-            </div><!-- Edn Resume Item -->
-
+         
           </div>
 
         </div>
