--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ Busco minha primeira oportunidade profissional para aplicar minhas competências
                     </div><!-- End Skills Item -->
 
                     <div class="progress">
-                      <span class="skill"><span>Estatística aplicada (distribuições, testes de hipótese, variabilidade).</span> <i class="val">80%</i></span>
+                      <span class="skill"><span>Estatística aplicada (distribuições, testes de hipótese, variabilidade).</span> <i class="val">40%</i></span>
                       <div class="progress-bar-wrap">
                         <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
                       </div>
@@ -275,22 +275,6 @@ Busco minha primeira oportunidade profissional para aplicar minhas competências
                 Stack: Python, SQL, Excel, Google Sheets , Looker Studio, Power BI.
               </p>
             </div><!-- Edn Resume Item -->
-
-            <div class="resume-item">
-              <h4>Cientista de Dados Sênior</h4>
-              <h5>Março/2020 - Agosto/2022</h5>
-              <p><em>Loft Real State Startup</em></p>
-              <ul>
-                <li>Desenvolvimento da estratégia de Engenharia de Machine Learning para deploy de modelos em produção.</li> 
-                <li>Criação de um projeto para classificar Leads e priorizar a comunicação dos times de marketing e comercial.</li> 
-                <li>Contribuição no desenvolvimento de feed automatizado de marketing com as melhores fotos de apartamentos, o que reduziu o CAC em 68%.</li> 
-                <li>Criação da estratégia de Sistema de Recomendação com diversos modelos para áreas de negócio.</li> 
-                <li>Implementação de testes A/B Bayesianos com estratégia de Multi-Armed Bandit.</li> 
-              </ul>
-              <p>
-                Stack: Python, SQL, GCP, BigQuery, Machine Learning, Looker Studio.
-              </p>
-            </div><!-- Edn Resume Item -->
          
           </div>
 
@@ -316,8 +300,8 @@ Busco minha primeira oportunidade profissional para aplicar minhas competências
           <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
             <li data-filter="*" class="filter-active">Todos</li>
             <li data-filter=".filter-app">Análise & Visualização</li>
-            <li data-filter=".filter-product">Automação</li>
-            <li data-filter=".filter-branding">Inteligência Artificial</li>
+            <li data-filter=".filter-product">Em Contrução</li>
+            <li data-filter=".filter-branding">Em Contrução</li>
             <li data-filter=".filter-books"></li>
           </ul><!-- End Portfolio Filters -->
 
@@ -329,15 +313,15 @@ Busco minha primeira oportunidade profissional para aplicar minhas competências
                 <h4>Desempenho de Campanha de Marketing</h4>
                 <p>Anális de Dados de Marketing</p>
                 <a href="assets/img/portfolio/app-1.jpg" title="Análise Marketing" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="https://github.com/Meigarom/analise-campanha-marketing" title="Mais Detalhes" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="https://github.com/Ricksooon/analise-capanha-de-markting" title="Mais Detalhes" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
               <img src="assets/img/portfolio/app-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Product 1</h4>
-                <p>Lorem ipsum, dolor sit amet consectetur</p>
+                <h4>Em Contrução</h4>
+                <p>Aprendendo e aplicando análise de dados para desenvolver projetos com impacto real</p>
                 <a href="assets/img/portfolio/app-1.jpg" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
@@ -346,8 +330,8 @@ Busco minha primeira oportunidade profissional para aplicar minhas competências
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <img src="assets/img/portfolio/app-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Branding 1</h4>
-                <p>Lorem ipsum, dolor sit amet consectetur</p>
+                <h4>Em Contrução</h4>
+                <p>Aprendendo e aplicando análise de dados para desenvolver projetos com impacto real</p>
                 <a href="assets/img/portfolio/app-1.jpg" title="Branding 1" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
@@ -356,8 +340,8 @@ Busco minha primeira oportunidade profissional para aplicar minhas competências
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
               <img src="assets/img/portfolio/app-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Books 1</h4>
-                <p>Lorem ipsum, dolor sit amet consectetur</p>
+                <h4>Em Contrução</h4>
+                <p>Aprendendo e aplicando análise de dados para desenvolver projetos com impacto real</p>
                 <a href="assets/img/portfolio/app-1.jpg" title="Branding 1" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
@@ -366,8 +350,8 @@ Busco minha primeira oportunidade profissional para aplicar minhas competências
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <img src="assets/img/portfolio/app-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>App 2</h4>
-                <p>Lorem ipsum, dolor sit amet consectetur</p>
+                <h4>Em Contrução</h4>
+                <p>Aprendendo e aplicando análise de dados para desenvolver projetos com impacto real</p>
                 <a href="assets/img/portfolio/app-1.jpg" title="App 2" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
@@ -376,8 +360,8 @@ Busco minha primeira oportunidade profissional para aplicar minhas competências
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
               <img src="assets/img/portfolio/app-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Product 2</h4>
-                <p>Lorem ipsum, dolor sit amet consectetur</p>
+                <h4>Em Contrução</h4>
+                <p>Aprendendo e aplicando análise de dados para desenvolver projetos com impacto real</p>
                 <a href="assets/img/portfolio/app-1.jpg" title="Product 2" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
@@ -386,8 +370,8 @@ Busco minha primeira oportunidade profissional para aplicar minhas competências
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <img src="assets/img/portfolio/app-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Branding 2</h4>
-                <p>Lorem ipsum, dolor sit amet consectetur</p>
+                <h4>Em Contrução</h4>
+                <p>Aprendendo e aplicando análise de dados para desenvolver projetos com impacto real</p>
                 <a href="assets/img/portfolio/app-1.jpg" title="Branding 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
@@ -396,8 +380,8 @@ Busco minha primeira oportunidade profissional para aplicar minhas competências
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
               <img src="assets/img/portfolio/app-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Books 2</h4>
-                <p>Lorem ipsum, dolor sit amet consectetur</p>
+                <h4>BEm Contrução</h4>
+                <p>Aprendendo e aplicando análise de dados para desenvolver projetos com impacto real</p>
                 <a href="assets/img/portfolio/app-1.jpg" title="Branding 2" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
@@ -406,8 +390,8 @@ Busco minha primeira oportunidade profissional para aplicar minhas competências
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <img src="assets/img/portfolio/app-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>App 3</h4>
-                <p>Lorem ipsum, dolor sit amet consectetur</p>
+                <h4>Em Contrução</h4>
+                <p>Aprendendo e aplicando análise de dados para desenvolver projetos com impacto real</p>
                 <a href="assets/img/portfolio/app-1.jpg" title="App 3" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
@@ -416,8 +400,8 @@ Busco minha primeira oportunidade profissional para aplicar minhas competências
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
               <img src="assets/img/portfolio/app-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Product 3</h4>
-                <p>Lorem ipsum, dolor sit amet consectetur</p>
+                <h4>Em Contrução</h4>
+                <p>Aprendendo e aplicando análise de dados para desenvolver projetos com impacto real</p>
                 <a href="assets/img/portfolio/app-1.jpg" title="Product 3" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
@@ -426,8 +410,8 @@ Busco minha primeira oportunidade profissional para aplicar minhas competências
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <img src="assets/img/portfolio/app-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Branding 3</h4>
-                <p>Lorem ipsum, dolor sit amet consectetur</p>
+                <h4>Em Contrução</h4>
+                <p>Aprendendo e aplicando análise de dados para desenvolver projetos com impacto real</p>
                 <a href="assets/img/portfolio/app-1.jpg" title="Branding 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
@@ -436,8 +420,8 @@ Busco minha primeira oportunidade profissional para aplicar minhas competências
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
               <img src="assets/img/portfolio/app-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Books 3</h4>
-                <p>Lorem ipsum, dolor sit amet consectetur</p>
+                <h4>Em Contrução</h4>
+                <p>Aprendendo e aplicando análise de dados para desenvolver projetos com impacto real</p>
                 <a href="assets/img/portfolio/app-1.jpg" title="Branding 3" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
