--- a/index.html
+++ b/index.html
@@ -84,12 +84,13 @@
               <h4>Sobre mim</h4>
               <p>
               
-Olá! Sou um analista de dados em formação, focado em transformar dados em insights que geram valor e apoiar a tomada de decisão.
-Atualmente no último ano da graduação em Banco de Dados, estou desenvolvendo minhas habilidades práticas na Comunidade DS, onde aprofundo meus conhecimentos 
-Busco minha primeira oportunidade profissional para aplicar minhas competências, aprender continuamente e contribuir para o crescimento de uma empresa orientada a dados. 
+Olá! Sou um analista de dados em formação, focado em transformar dados brutos em insights acionáveis que geram valor e apoiam a tomada de decisão estratégica.
+Através da Comunidade DS.
+        <p>
+          aprofundo meus conhecimentos práticos em SQL para extração e manipulação de dados, Python (com Pandas) para limpeza e análise exploratória (EDA), e Power BI para visualização de dados e criação de dashboards interativos.
+Meu foco é a definição de métricas e KPIs, aplicando as quatro etapas da análise de dados (Descritiva, Diagnóstica, Preditiva e Prescritiva) para construir uma cultura de Business Intelligence (BI).
               </p>
-              <p> Atualmente, estou desenvolvendo minhas habilidades práticas na Comunidade DS, onde aprofundo meus conhecimentos em Excel, Power BI, Python e SQL. Meu foco é a aplicação de métricas e das quatro etapas da análise de dados: Descritiva (o que aconteceu), Diagnóstica (por que aconteceu), Preditiva (o que vai acontecer) e Prescritiva (o que devemos fazer).
-                   Essa especialização prática, somada à base sólida que estou construindo no último ano da graduação em Banco de Dados, me prepara para os desafios reais do mercado. 
+              <p> Essa especialização, somada à base sólida em Modelagem de Dados da minha graduação, me prepara para os desafios do mercado. Busco uma oportunidade para aplicar minhas competências em Storytelling com Dados, contribuindo para o crescimento de uma empresa data-driven.. 
               </p>
             </div>
           </div>
