--- a/index.html
+++ b/index.html
@@ -85,9 +85,8 @@
               <p>
               
 Olá! Sou um Análista de Dados em formação, focado em transformar dados brutos em Insights acionáveis que geram valor e apoiam a tomada de decisão estratégica.
-Através da Comunidade DS.
         <p>
-          Aprofundo meus conhecimentos práticos em SQL para Extração e Manipulação de Dados, Python (com Pandas) para limpeza e Análise Exploratória (EDA), e Power BI para Visualização de Dados e criação de Dashboards interativos.
+         Através da Comunidade DS, aprofundo meus conhecimentos práticos em SQL para Extração e Manipulação de Dados, Python (com Pandas) para limpeza e Análise Exploratória (EDA), e Power BI para Visualização de Dados e criação de Dashboards interativos.
 Meu foco é a definição de métricas e KPIs, aplicando as quatro etapas da Análise de Dados (Descritiva, Diagnóstica, Preditiva e Prescritiva) para construir uma cultura de Business Intelligence (BI).
               </p>
               <p> Essa especialização, somada à base sólida em Modelagem de Dados da minha graduação, me prepara para os desafios do mercado. Busco uma oportunidade para aplicar minhas competências em Storytelling com Dados, contribuindo para o crescimento de uma empresa data-driven.. 
